--- a/learnCSS/index.html
+++ b/learnCSS/index.html
@@ -9,6 +9,17 @@
         <div class="container">
             <h1>Some new CSS test.</h1>
             <h2>Anyone like apples?</h2>
+            <div>
+                <img src="blackhole.jpeg" class="borderImg">
+            </div>
+        <ul>
+            <li>Some item</li>
+            <li>another item</li>
+            <ol>
+                <li> Ordered item 1</li>
+                <li> Ordered item 2</li>
+            </ol>
+        </ul>
         </div>
     </body>
 
