--- a/learnCSS/index.html
+++ b/learnCSS/index.html
@@ -7,25 +7,56 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="color:yellow;" id="foo">h1 Some new CSS test.</h1>
-            <h2>h2 Anyone like apples?</h2>
-            <h3>h3 I wish red bull gave me wings.</h3>
-            <div>
-                <img src="blackhole.jpeg" class="borderImg">
+            <!--
+<h1 style="color:yellow;" id="foo">h1 Some new CSS test.</h1>
+<h2>h2 Anyone like apples?</h2>
+<h3>h3 I wish red bull gave me wings.</h3>
+-->
+            <div class="row">
+                <div class = "col-3">
+                    <img src="blackhole.jpeg" class="borderImg">
+                </div>
+                <div class = "col-6">
+                    <img src="blackhole.jpeg" class="borderImg">
+                </div>
+                <div class = "col-3">
+                    <img src="blackhole.jpeg" class="borderImg">
+                </div>
             </div>
-            <ul>
-                <li>Some item</li>
-                <li>another item</li>
-                <ol>
-                    <li> Ordered item 1</li>
-                    <li> Ordered item 2</li>
-                </ol>
-                <li>Yet another.</li>
-            </ul>
+            <div class="row">
+                <div class = "col-2">
+                    <img src="blackhole.jpeg" class="borderImg">
+                </div>
+                <div class = "col-7">
+                    <img src="blackhole.jpeg" class="borderImg">
+                </div>
+                <div class = "col-4">
+                    <img src="blackhole.jpeg" class="borderImg">
+                </div>
+            </div>
+            <!--
+<ul>
+<li>Some item</li>
+<li>another item</li>
+<ol>
+<li> Ordered item 1</li>
+<li> Ordered item 2</li>
+</ol>
+<li>Yet another.</li>
+</ul>
+</div>
+<h1>h1 I should build a tree swing</h1>
+<h2>h2 I hope the rope does not break</h2>
+<h3>h3 That would hurt.</h3>
+<div class="formatting">
+<div><b>I am so BOLD</b></div>
+<div>I am leaning over...</div>
+<div><em>I am so EMPHASIZED!</em></div>
+<div><strong>I am so Strong</strong></div>
+<div></div>
+<div></div>
+-->
         </div>
-        <h1>h1 I should build a tree swing</h1>
-        <h2>h2 I hope the rope does not break</h2>
-        <h3>h3 That would hurt.</h3>
+        <a href="#">Click Me Now</a>
     </body>
-
 </html>
