--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="learner.js"></script>
     </head>
     <body>
+        <h1>Percentage Calculators</h1>
+        <p>X is what % of Y?</p>
+        <form id="xIsWhatPercentOfY">
+            <input type="text" id="numField1"> is what % of
+            <input type="text" id="numField2">?<br><br>
+            <input type="submit" value="Calculate">
+        </form>
+        <h3 id="resultField"></h3>
+        <script type="text/javascript" src="learner.js"></script>
     </body>
 </html>
